kustomize/overlays/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
  labels:
    app.kubernetes.io/part-of: vanta-boutique
    environment: eks
